@@ -46,6 +46,7 @@ Brian Gough		bjg@network-theory.co.uk
 Brian Jones		cbj@nortel.net
 Bruce Korb		bkorb@gnu.org
 Bruno Haible		haible@ilog.fr
+Carsten Lohrke		carlo@gentoo.org
 Charles Wilson		cwilson@ece.gatech.edu
 Chris Provenzano	proven@io.proven.org
 Christian Cornelssen	ccorn@cs.tu-berlin.de
