@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2001, 2002  Free Software Foundation, Inc.
+# Copyright (C) 2001, 2002, 2008  Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -57,8 +57,8 @@ END
 cat > Mycomp << 'END'
 #!/bin/sh
 
-case "$@" in
- *-c*-o* | *-o*-c*)
+case " "$* in
+ *\ -c*\ -o* | *\ -o*\ -c*)
     exit 1
     ;;
 esac
