@@ -1,3 +1,10 @@
+2008-01-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* tests/ccnoco.test (Mycomp): Use a tighter match for -c -o,
+	to avoid matching for example `LDFLAGS=-Wl,--sort-common'.
+	* THANKS: Update.
+	Report and analysis by Carsten Lohrke and Mike Frysinger.
+
 2008-01-07  Stepan Kasal  <skasal@redhat.com>
 
 	* automake.in (handle_texinfo_helper, handle_lib_objects): Fix
